--- a/UnrealMvvm/UnrealMvvm.uplugin
+++ b/UnrealMvvm/UnrealMvvm.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0",
+	"VersionName": "3.0.0",
 	"FriendlyName": "UnrealMvvm",
 	"Description": "MVVM framework for Unreal",
 	"Category": "Other",
@@ -18,6 +18,11 @@
 		{
 			"Name": "UnrealMvvm",
 			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "UnrealMvvmEditor",
+			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
 	]
