--- a/UnrealMvvmTests/UnrealMvvmTests.uplugin
+++ b/UnrealMvvmTests/UnrealMvvmTests.uplugin
@@ -17,6 +17,11 @@
 	"Modules": [
 		{
 			"Name": "UnrealMvvmTests",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "UnrealMvvmTestsEditor",
 			"Type": "UncookedOnly",
 			"LoadingPhase": "Default"
 		}
